# SDL2_Snake_Game

./: CMakeLists.txt  LICENSE  README.md
src/: args.c  args.h  controller.c  controller.h  game.c  game.h  main.c  renderer.c  renderer.h
